added the first image to the image container

--- a/index.html
+++ b/index.html
@@ -13,7 +13,12 @@
   </head>
   <body>
     <!-- Player Container -->
-    <div class="player-container"></div>
+    <div class="player-container">
+      <!-- Song -->
+      <div class="img-container">
+        <img src="img/ryanne-1.jpg" alt="" />
+      </div>
+    </div>
     <!-- Script -->
     <script src="script.js"></script>
   </body>
