added the first title to image container

--- a/index.html
+++ b/index.html
@@ -16,8 +16,9 @@
     <div class="player-container">
       <!-- Song -->
       <div class="img-container">
-        <img src="img/ryanne-1.jpg" alt="" />
+        <img src="img/ryanne-1.jpg" alt="Album Art" />
       </div>
+      <h2 id="title">Electric Chill Machine</h2>
     </div>
     <!-- Script -->
     <script src="script.js"></script>
