added the artist name to image container

--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
         <img src="img/ryanne-1.jpg" alt="Album Art" />
       </div>
       <h2 id="title">Electric Chill Machine</h2>
+      <h3 id="artist">Jacinto</h3>
     </div>
     <!-- Script -->
     <script src="script.js"></script>
