created progress container

--- a/index.html
+++ b/index.html
@@ -21,6 +21,10 @@
       <h2 id="title">Electric Chill Machine</h2>
       <h3 id="artist">Jacinto</h3>
       <audio src="music/ryanne-1.mp3" controls></audio>
+      <!-- Progress -->
+      <div class="progress-container" id="progress-container">
+        <div class="progress" id="progress"></div>
+      </div>
     </div>
     <!-- Script -->
     <script src="script.js"></script>
