created duration wrapper

--- a/index.html
+++ b/index.html
@@ -24,6 +24,7 @@
       <!-- Progress -->
       <div class="progress-container" id="progress-container">
         <div class="progress" id="progress"></div>
+        <div class="duration-wrapper"></div>
       </div>
     </div>
     <!-- Script -->
