created current time span

--- a/index.html
+++ b/index.html
@@ -24,7 +24,9 @@
       <!-- Progress -->
       <div class="progress-container" id="progress-container">
         <div class="progress" id="progress"></div>
-        <div class="duration-wrapper"></div>
+        <div class="duration-wrapper">
+          <span id="current-time">0:00</span>
+        </div>
       </div>
     </div>
     <!-- Script -->
