created duration span

--- a/index.html
+++ b/index.html
@@ -26,6 +26,7 @@
         <div class="progress" id="progress"></div>
         <div class="duration-wrapper">
           <span id="current-time">0:00</span>
+          <span id="duration">2:06</span>
         </div>
       </div>
     </div>
