--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
       </div>
       <h2 id="title">Electric Chill Machine</h2>
       <h3 id="artist">Jacinto</h3>
-      <audio src="music/ryanne-1.mp3" controls></audio>
+      <audio src="music/ryanne-1.mp3"></audio>
       <!-- Progress -->
       <div class="progress-container" id="progress-container">
         <div class="progress" id="progress"></div>
