added prev and play btn

--- a/index.html
+++ b/index.html
@@ -29,6 +29,11 @@
           <span id="duration">2:06</span>
         </div>
       </div>
+      <!-- COntrols -->
+      <div class="player-controls">
+        <i class="fas fa-backward" id="prev" title="Previous"></i>
+        <i class="fas fa-play"></i>
+      </div>
     </div>
     <!-- Script -->
     <script src="script.js"></script>
