--- a/index.html
+++ b/index.html
@@ -32,7 +32,8 @@
       <!-- COntrols -->
       <div class="player-controls">
         <i class="fas fa-backward" id="prev" title="Previous"></i>
-        <i class="fas fa-play"></i>
+        <i class="fas fa-play main-button" id="play" title="Play"></i>
+        <i class="fas fa-forward" id="next" title="Next"></i>
       </div>
     </div>
     <!-- Script -->
