--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
           <span id="duration">2:06</span>
         </div>
       </div>
-      <!-- COntrols -->
+      <!-- Controls -->
       <div class="player-controls">
         <i class="fas fa-backward" id="prev" title="Previous"></i>
         <i class="fas fa-play main-button" id="play" title="Play"></i>
