created a different file for songs array

--- a/index.html
+++ b/index.html
@@ -37,6 +37,7 @@
       </div>
     </div>
     <!-- Script -->
+    <script src="songs.js"></script>
     <script src="script.js"></script>
   </body>
 </html>
