--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
         <i class="fas fa-play main-button" id="play" title="Play"></i>
         <i class="fas fa-forward" id="next" title="Next"></i>
       </div>
-      <!-- section for displaying the volume slider-->
+      <!-- Volume slider-->
       <div class="slider_container">
         <i class="fa fa-volume-down"></i>
         <input
