--- a/index.html
+++ b/index.html
@@ -37,15 +37,24 @@
       </div>
       <!-- Volume slider-->
       <div class="slider_container">
-        <i class="fa fa-volume-down"></i>
-        <input
-          type="range"
-          min="1"
-          max="100"
-          value="99"
-          class="volume_slider"
-        />
-        <i class="fa fa-volume-up"></i>
+        <div class="">
+          <i class="fa fa-volume-down"></i>
+          <input
+            type="range"
+            min="1"
+            max="100"
+            value="99"
+            class="volume_slider"
+          />
+          <i class="fa fa-volume-up"></i>
+        </div>
+        <div class="">
+          <img
+            style="color: rgb(129, 129, 129); width: 30px"
+            src="./img/playlist.svg"
+            alt="list icon"
+          />
+        </div>
       </div>
     </div>
     <!-- Script -->
