gave the volume container a width

--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
       </div>
       <!-- Volume slider-->
       <div class="slider_container">
-        <div class="">
+        <div class="volume-container">
           <i class="fa fa-volume-down"></i>
           <input
             type="range"
