--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
     <div class="list-border">
       <div class="list-items" id="list-items">
         <img src="img/Ed-Sheeran-team.jpg" alt="team" />
-        <p>The A Team <br />Ed Sheeran</p>
+        <p><b>The A Team</b> <br />Ed Sheeran</p>
       </div>
     </div>
     <!-- Script -->
