selected playlist icon in js file

--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
           />
           <i class="fa fa-volume-up"></i>
         </div>
-        <div class="">
+        <div class="playlist-icon">
           <img
             style="color: rgb(129, 129, 129); width: 27px"
             src="./img/playlist.svg"
@@ -56,14 +56,15 @@
           />
         </div>
       </div>
-    </div>
-    <!-- Music List -->
-    <div class="list-border">
-      <div class="list-items" id="list-items">
-        <img src="img/Ed-Sheeran-team.jpg" alt="team" />
-        <p><b>The A Team</b> <br />Ed Sheeran</p>
+      <!-- Music List -->
+      <div class="list-border" hidden>
+        <div class="list-items" id="list-items">
+          <img src="img/Ed-Sheeran-team.jpg" alt="team" />
+          <p><b>The A Team</b> <br />Ed Sheeran</p>
+        </div>
       </div>
     </div>
+
     <!-- Script -->
     <script src="songs.js"></script>
     <script src="script.js"></script>
