--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
         </div>
       </div>
       <!-- Music List -->
-      <div class="list-border" hidden>
+      <div class="list-border" style="display: none">
         <div class="list-items" id="list-items">
           <img src="img/Ed-Sheeran-team.jpg" alt="team" />
           <p><b>The A Team</b> <br />Ed Sheeran</p>
