--- a/index.html
+++ b/index.html
@@ -62,6 +62,14 @@
           <img src="img/Ed-Sheeran-team.jpg" alt="team" />
           <p><b>The A Team</b> <br />Ed Sheeran</p>
         </div>
+        <div class="list-items" id="list-items">
+          <img src="img/Ed-Sheeran-team.jpg" alt="team" />
+          <p><b>The A Team</b> <br />Ed Sheeran</p>
+        </div>
+        <div class="list-items" id="list-items">
+          <img src="img/Ed-Sheeran-team.jpg" alt="team" />
+          <p><b>The A Team</b> <br />Ed Sheeran</p>
+        </div>
       </div>
     </div>
 
