--- a/index.html
+++ b/index.html
@@ -60,15 +60,10 @@
       <div class="list-border" style="display: none">
         <div class="list-items" id="list-items">
           <img src="img/Ed-Sheeran-team.jpg" alt="team" />
-          <p><b>The A Team</b> <br />Ed Sheeran</p>
-        </div>
-        <div class="list-items" id="list-items">
-          <img src="img/Ed-Sheeran-team.jpg" alt="team" />
-          <p><b>The A Team</b> <br />Ed Sheeran</p>
-        </div>
-        <div class="list-items" id="list-items">
-          <img src="img/Ed-Sheeran-team.jpg" alt="team" />
-          <p><b>The A Team</b> <br />Ed Sheeran</p>
+          <div class="paragraphs">
+            <p id="first-paragraph"><b>The A Team</b></p>
+            <p id="second-paragraph">Ed Sheeran</p>
+          </div>
         </div>
       </div>
     </div>
