selected the necessary playlist elements

--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
       <!-- Music List -->
       <div class="list-border" style="display: none">
         <div class="list-items" id="list-items">
-          <img src="img/Ed-Sheeran-team.jpg" alt="team" />
+          <img src="img/Ed-Sheeran-team.jpg" alt="team" id="list-img" />
           <div class="paragraphs">
             <p id="first-paragraph"><b>The A Team</b></p>
             <p id="second-paragraph">Ed Sheeran</p>
