finished playlist functionality

--- a/index.html
+++ b/index.html
@@ -57,12 +57,17 @@
         </div>
       </div>
       <!-- Music List -->
-      <div class="list-border" style="display: none">
-        <div class="list-items" id="list-items">
-          <img src="img/Ed-Sheeran-team.jpg" alt="team" id="list-img" />
-          <div class="paragraphs">
-            <p id="first-paragraph"><b>The A Team</b></p>
-            <p id="second-paragraph">Ed Sheeran</p>
+      <div class="list-container">
+        <div class="list-border" style="display: none">
+          <div class="list-items" id="list-items">
+            <div class="list-item-image">
+              <img src="img/Ed-Sheeran-team.jpg" alt="team" id="list-img" />
+            </div>
+
+            <div class="list-item-info">
+              <h4 id="list-item-title">The A Team</h4>
+              <p id="list-item-artist">Ed Sheeran</p>
+            </div>
           </div>
         </div>
       </div>
