added titles to vol slider and playlist icon

--- a/index.html
+++ b/index.html
@@ -45,6 +45,7 @@
             max="100"
             value="99"
             class="volume_slider"
+            title="Volume"
           />
           <i class="fa fa-volume-up"></i>
         </div>
@@ -53,6 +54,7 @@
             style="color: rgb(129, 129, 129); width: 27px"
             src="./img/playlist.svg"
             alt="list icon"
+            title="Playlist"
           />
         </div>
       </div>
